--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Header {
+  flex: 1;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  justify-items: center;
+  margin-top: 30px;
+  padding-bottom: 30px;
+  box-shadow: 0 20px 20px -20px rgb(115, 115, 115);
 }
 
-.App-link {
-  color: #61dafb;
+.Header .main {
+  flex: 1;
+  font-size: 20px;
+  font-weight: 1000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Header .nav {
+  flex: 2;
+  flex-direction: row;
+  height: 100%;
+}
+
+.Header .menu {
+  flex: 1;
+}
+
+.Header .nav .HeaderButtonOff {
+  flex: 1;
+  width: 20%;
+  height: 100%;
+  border: 0;
+  background-color: white;
+  color: rgb(140, 140, 140);
+  font-size: 14px;
+}
+.Header .nav .HeaderButtonOn {
+  flex: 1;
+  width: 20%;
+  height: 100%;
+  border: 0;
+  background-color: white;
+  color: rgb(132, 132, 132);
+  font-size: 16px;
 }
