--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,10 @@
   color: rgb(132, 132, 132);
   font-size: 16px;
 }
+
+.Main {
+  flex: 1;
+  text-align: center;
+  justify-items: center;
+  background-color: rgb(121, 121, 121);
+}
