--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
+.App {
+  background-image: url(./imgs/main.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 .Header {
   flex: 1;
   display: flex;
   text-align: center;
   justify-items: center;
+  background-color: white;
+  background-attachment: fixed;
   margin-top: 30px;
   padding-bottom: 30px;
   box-shadow: 0 20px 20px -20px rgb(115, 115, 115);
@@ -20,8 +30,8 @@
   height: 100%;
 }
 
-.Header .menu {
-  flex: 1;
+.Header .blank {
+  flex: 2;
 }
 
 .Header .nav .HeaderButtonOff {
@@ -30,7 +40,7 @@
   height: 100%;
   border: 0;
   background-color: white;
-  color: rgb(140, 140, 140);
+  color: rgb(100, 100, 100);
   font-size: 14px;
 }
 .Header .nav .HeaderButtonOn {
@@ -39,7 +49,7 @@
   height: 100%;
   border: 0;
   background-color: white;
-  color: rgb(132, 132, 132);
+  color: rgb(90, 90, 90);
   font-size: 16px;
 }
 
@@ -47,5 +57,42 @@
   flex: 1;
   text-align: center;
   justify-items: center;
-  background-color: rgb(121, 121, 121);
+  margin-top: 20px;
+}
+
+.Main-bgimg {
+  width: 100%;
+  height: 550px;
+  background-size: contain;
+  position: relative;
+  display: inline-block;
+}
+
+.Main-text1 {
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  font-size: 60px;
+}
+.Main-text2 {
+  position: absolute;
+  top: 35%;
+  left: 10%;
+  font-size: 60px;
+}
+.Main-text3 {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  font-size: 60px;
+}
+
+.Main button {
+  position: absolute;
+  top: 68%;
+  left: 10%;
+  font-size: 20px;
+  border-radius: 50px;
+  padding: 20px;
+  background-color: white;
 }
