--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
 .App {
+  background-color: rgb(90, 90, 90);
+}
+
+.App1 {
   background-image: url(./imgs/main.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  background-attachment: fixed;
+  margin-bottom: 10px;
+}
+
+.App2 {
+  background-color: white;
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
@@ -12,7 +25,6 @@
   text-align: center;
   justify-items: center;
   background-color: white;
-  background-attachment: fixed;
   margin-top: 30px;
   padding-bottom: 30px;
   box-shadow: 0 20px 20px -20px rgb(115, 115, 115);
@@ -62,10 +74,14 @@
 
 .Main-bgimg {
   width: 100%;
-  height: 550px;
-  background-size: contain;
+  height: 600px;
   position: relative;
-  display: inline-block;
+}
+
+.About {
+  width: 100%;
+  height: 700px;
+  position: relative;
 }
 
 .Main-text1 {
@@ -93,6 +109,7 @@
   left: 10%;
   font-size: 20px;
   border-radius: 50px;
-  padding: 20px;
+  padding-inline: 30px;
+  padding-block: 10px;
   background-color: white;
 }
